--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .background { 
-	background-image: url('img/cube.jpg');
+	background-image: url('../img/cover-img.jpg');
 	background-repeat: no-repeat;
 	background-attachment: fixed;  
 	background-size: cover;
