--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 .background { 
-	background-image: url('../img/cover-img.jpg');
+	background-image: url('../img/cover-img.png');
 	background-repeat: no-repeat;
 	background-attachment: fixed;  
 	background-size: cover;
-    background-color: black;
+}
+
+h1 {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
 }
