--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,18 @@
-.background { 
-	background-image: url('../img/cover-img.png');
+body { 
+	background-image: url(img/cover-img.png);
 	background-repeat: no-repeat;
 	background-attachment: fixed;  
 	background-size: cover;
 }
-
 h1 {
+	display: flex;
+	align-items: flex-end;
+	color:orange
+}
+
+p {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
+	color: greenyellow;
 }
