--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,39 @@
+*{ 
+    margin: 0;
+    padding: 0;
+}
+
+
 body { 
 	background-image: url(../img/cover-img.png);
 	background-repeat: no-repeat;
 	background-attachment: fixed;  
 	background-size: cover;
 }
-h1 {
-	display: flex;
-	align-items: flex-end;
-	color:orange
-}
-
-p {
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	color: greenyellow;
-}
 
 /* Menu grid */
 .container { 
-	background:grey;
+    width:auto;
+	height:auto;
+    margin: 0px;    
+    position: absolute;
+    right: 10%;          
+    bottom: 35%;            
+    text-align:right; 
 }
+
+.grid {
+	display: grid;
+	align-content: center;
+	grid-template-columns: auto auto auto;
+	grid-gap: 10px;
+	
+  }
+  
+  .grid > div {
+	background-color: rgba(255, 255, 255, 0.8);
+	text-align: center;
+	padding: 100% 100%;
+	font-size: 28px;
+	border-radius: 20px;
+  }
