--- a/css/style.css
+++ b/css/style.css
@@ -18,22 +18,70 @@ body {
     margin: 0px;    
     position: absolute;
     right: 10%;          
-    bottom: 35%;            
+    bottom: 30%;            
     text-align:right; 
 }
 
+.container h1{
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: bold;
+    color:#d8d8d8;
+    font-size: 95px;
+	display: flex;
+	justify-content: flex-end;
+	margin-bottom: 50px;
+}
 .grid {
 	display: grid;
 	align-content: center;
 	grid-template-columns: auto auto auto;
 	grid-gap: 10px;
-	
-  }
+	padding-left:0;
+	margin-bottom:0;
+	list-style:none
+}
   
-  .grid > div {
-	background-color: rgba(255, 255, 255, 0.8);
-	text-align: center;
-	padding: 100% 100%;
-	font-size: 28px;
-	border-radius: 20px;
-  }
+.grid li {
+	display:inline-block;
+	margin-bottom:4px
+}
+  
+.grid a {
+	background-color:#eceeef;
+	color:#818a91;
+	font-size:50px;
+	display:inline-block;
+	line-height:75px;
+	width: 75px;
+	height:75px;
+	text-align:center;
+	margin-right:10px;
+	border-radius:100%;
+	-webkit-transition:all .2s linear;
+	-o-transition:all .3s linear;
+	transition:all .3s linear
+}
+
+.grid a.home:hover {
+	background-color:#3b5998
+}
+
+.grid a.contact:hover {
+	background-color:#00aced
+}
+
+.grid a.user:hover {
+	background-color:#007bb6
+}
+  
+.grid a.stats:hover{
+	background-color:#007bb6
+}
+
+.grid a.report:hover{
+	background-color:#4285F4
+}
+
+.grid a.privacy-policy:hover{
+	background-color:#4285F4
+}
